// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`swapRequested > creates a new deposit channel swap request and creates a pending tx ref record 1`] = `
{
  "address": null,
  "failedVaultSwapId": null,
  "id": Any<Number>,
  "slot": null,
  "swapDepositChannelId": Any<BigInt>,
  "vaultSwapRequestId": null,
}
`;

exports[`swapRequested > creates a new swap request (DEPOSIT_CHANNEL 180) 1`] = `
{
  "ccmDepositReceivedBlockIndex": "87-13",
  "ccmGasBudget": "2",
  "ccmMessage": "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000003f7a400000000000000000000000000000000000000000000000000000000000000074761735465737400000000000000000000000000000000000000000000000000",
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": 2,
  "dcaNumberOfChunks": 10,
  "depositAmount": "4999922",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2024-08-23T13:13:12.002Z,
  "depositFinalisedBlockIndex": "87-13",
  "depositTransactionRef": null,
  "destAddress": "0xa51c1fc2f0d1a1b8494ed1fe312d7c3a78ed91c0",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 2n,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "CCM",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "4999922",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request (DEPOSIT_CHANNEL) 1`] = `
{
  "beneficiaries": [],
  "ccmDepositReceivedBlockIndex": "87-13",
  "ccmGasBudget": "2",
  "ccmMessage": "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000003f7a400000000000000000000000000000000000000000000000000000000000000074761735465737400000000000000000000000000000000000000000000000000",
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": 2,
  "dcaNumberOfChunks": 10,
  "depositAmount": "4999922",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2024-08-23T13:13:12.002Z,
  "depositFinalisedBlockIndex": "87-13",
  "depositTransactionRef": null,
  "destAddress": "0xa51c1fc2f0d1a1b8494ed1fe312d7c3a78ed91c0",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 2n,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "CCM",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "4999922",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request (INGRESS_EGRESS_FEE) 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": null,
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": null,
  "destAddress": null,
  "destAsset": "ArbEth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 8n,
  "originType": "INTERNAL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "INGRESS_EGRESS_FEE",
  "srcAddress": null,
  "srcAsset": "ArbUsdc",
  "swapDepositChannelId": null,
  "swapInputAmount": "450800",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request (LEGACY VAULT 180) 1`] = `
{
  "beneficiaries": [],
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "500000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "0x9c617e12f6ddd5c7cff2236b32970bc2bd168799c90f907269348e6ca8c7be18",
  "destAddress": "0x16988558ad8ef084dbe0016c9ffdae908e480621",
  "destAsset": "Usdt",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 162n,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "ArbUsdc",
  "swapDepositChannelId": null,
  "swapInputAmount": "500000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request (VAULT 180) 1`] = `
{
  "beneficiaries": [
    {
      "account": "cFM8kRvLBXagj6ZXvrt7wCM4jGmHvb5842jTtXXg3mRHjrvKy",
      "channelId": null,
      "commissionBps": 100,
      "id": Any<BigInt>,
      "swapRequestId": Any<BigInt>,
      "type": "SUBMITTER",
    },
    {
      "account": "cFMYYJ9F1r1pRo3NBbnQDVRVRwY9tYem39gcfKZddPjvfsFfH",
      "channelId": null,
      "commissionBps": 150,
      "id": Any<BigInt>,
      "swapRequestId": Any<BigInt>,
      "type": "AFFILIATE",
    },
  ],
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": 2,
  "dcaNumberOfChunks": 1,
  "depositAmount": "10000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "2f1e9acbef4360ad0063ad7d3f7f6527a5caccbbee20097f4e045c1482a67aad",
  "destAddress": "0xb2806f8993e01460bc2f6e50fab466b5525dbe3a",
  "destAsset": "Flip",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fokMinPriceX128": "3.26183663919595400739649677085384465302843e+41",
  "fokRefundAddress": "mvBcghosEPisgS83icinjHig54bPcPXEwa",
  "fokRetryDurationBlocks": 150,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 1n,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 250,
}
`;

exports[`swapRequested > creates a new swap request (VAULT) 1`] = `
{
  "beneficiaries": [],
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "5000000000000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "0x76628bde2b6d66c84104d3721456edde968b8bafb347f63fbb67816546131204",
  "destAddress": "0x720bb1f2f46ed499dc328cbe43c54a03d710cd03",
  "destAsset": "Flip",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 62n,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "ArbEth",
  "swapDepositChannelId": null,
  "swapInputAmount": "5000000000000000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new vault swap request and creates a pending tx ref record 1`] = `
[
  {
    "address": "HZC6KyQYbxbKGiyWbBrwhxrPPecFi2yKG9jMwFqwNEtJ",
    "failedVaultSwapId": null,
    "id": Any<Number>,
    "slot": 413006n,
    "swapDepositChannelId": null,
    "vaultSwapRequestId": Any<BigInt>,
  },
]
`;
